# FPGA-Lane-Edge-Detection-V70

./: .gitignore  Project_Setup.md  README.md  akash.md  python_simulation.md
hls/edge_detection/: README_HLS.md  edge_detect.cpp  edge_detect.h  edge_detect.xclbin.info  edge_detect.xclbin.link_summary  edge_detect.xo  script.tcl
hls/edge_detection/.ipcache/0/1/0135374915805d2e/: 0135374915805d2e.xci  bd_85ad_vip_S01_0.dcp  bd_85ad_vip_S01_0_sim_netlist.v  bd_85ad_vip_S01_0_sim_netlist.vhdl  bd_85ad_vip_S01_0_stub.v  bd_85ad_vip_S01_0_stub.vhdl  stats.txt
hls/edge_detection/.ipcache/0/2/028a68d0977bf31b/: 028a68d0977bf31b.xci  ulp_ii_level0_wire_0.dcp  ulp_ii_level0_wire_0_sim_netlist.v  ulp_ii_level0_wire_0_sim_netlist.vhdl  ulp_ii_level0_wire_0_stub.v  ulp_ii_level0_wire_0_stub.vhdl
hls/edge_detection/.ipcache/0/2/02deb6b221a2ee62/: 02deb6b221a2ee62.xci  (+5 more)
hls/edge_detection/_x/: v++_link_edge_detect_guidance.pb3
hls/edge_detection/_x/logs/: optraceViewer.html
hls/edge_detection/_x/reports/link/: automation_summary.txt  system_estimate_edge_detect.xtxt  v++_link_edge_detect_guidance.html
hls/edge_detection/edge_project/: hls.app  kernel.xml
hls/edge_detection/edge_project/solution1/: solution1_data.json
hls/edge_detection/edge_project/solution1/.autopilot/: .automg_exit  .autopilot_exit
hls/edge_detection/edge_project/solution1/impl/ip/drivers/edge_detect_v1_0/src/: CMakeLists.txt  xedge_detect.c  xedge_detect_hw.h  xedge_detect_linux.c
host/: Makefile  host  host.cpp
src/: cpu_lane.py  edge_to_lane.py  video_to_edge.py
(+748 files in other folders)
